@@ -1,6 +1,14 @@
 # finite-cache
 
-A Clojure library designed to ... well, that part is up to you.
+finite-cache is a Clojure caching library that allows you to limit the size of a cache object.
+
+## Requirements
+* JDK 1.9+
+* You must start the JVM with option `-Djdk.attach.allowAttachSelf`,
+otherwise the agent will not be able to dynamically attach to the running
+process. For Leiningen, add `:jvm-opts ["-Djdk.attach.allowAttachSelf"]` to
+`project.clj`. For Boot, start the process with environment variable
+`BOOT_JVM_OPTIONS="-Djdk.attach.allowAttachSelf"`.
 
 ## Usage
 
@@ -48,15 +56,26 @@ A Clojure library designed to ... well, that part is up to you.
 
 ## License
 
-Copyright © 2020 FIXME
+```
+MIT License
 
-This program and the accompanying materials are made available under the
-terms of the Eclipse Public License 2.0 which is available at
-http://www.eclipse.org/legal/epl-2.0.
+Copyright 2020 Ertuğrul Çetin
 
-This Source Code may also be made available under the following Secondary
-Licenses when the conditions for such availability set forth in the Eclipse
-Public License, v. 2.0 are satisfied: GNU General Public License as published by
-the Free Software Foundation, either version 2 of the License, or (at your
-option) any later version, with the GNU Classpath Exception which is available
-at https://www.gnu.org/software/classpath/license.html.
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+```
